chore: manual rebase to main of libft files after vector updates

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: thblack- <thblack-@student.hive.fi>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/04/24 14:57:58 by thblack-          #+#    #+#              #
-#    Updated: 2025/10/30 16:18:42 by thblack-         ###   ########.fr        #
+#    Updated: 2025/11/04 18:37:10 by thblack-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -71,9 +71,9 @@ STRINGS_FILES = ft_strlen.c ft_strlcpy.c ft_strlcat.c ft_strchr.c \
 STRINGS		= $(addprefix $(STRINGS_DIR)/, $(STRINGS_FILES))
 
 # VECTORS
-VECTORS_FILES = vectors_basic_utils.c vectors_push_pop_get.c vectors_sort.c \
+VECTORS_FILES = vectors_builders.c vectors_push_pop_get.c vectors_sort.c \
 				vectors_insert_remove.c vectors_func_args.c vectors_pend.c \
-				vectors_printf.c
+				vectors_printf.c vectors_destroyers.c vectors_utils.c
 VECTORS		= $(addprefix $(VECTORS_DIR)/, $(VECTORS_FILES))
 
 # ARENA
